Fix: Ui updated

--- a/courses/buisiness.html
+++ b/courses/buisiness.html
@@ -86,7 +86,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">Machine Learning</h5>
+                                <h5 style="color: #149DDD;">Growing Your Audience</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style="background-color: #149DDD; cursor: pointer;">
@@ -103,7 +103,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">Dev Ops</h5>
+                                <h5 style="color: #149DDD;">Financial Analysis</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style=" cursor: pointer;">
@@ -120,7 +120,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">Android Nano-Degree</h5>
+                                <h5 style="color: #149DDD;">Stock Market</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style=" cursor: pointer;">
@@ -137,7 +137,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">AI Nano-Degree</h5>
+                                <h5 style="color: #149DDD;">Buisiness 101</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style=" cursor: pointer;">
@@ -154,7 +154,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">Data Science</h5>
+                                <h5 style="color: #149DDD;">Data and Customers</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style=" cursor: pointer;">
