--- a/courses/premium.html
+++ b/courses/premium.html
@@ -86,7 +86,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">Tech and Business</h5>
+                                <h5 style="color: #149DDD;">AI Nano-Degree</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style="background-color: #149DDD; cursor: pointer;">
@@ -103,7 +103,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">Human Anatomy</h5>
+                                <h5 style="color: #149DDD;">Tech and Buisiness</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style=" cursor: pointer;">
