--- a/courses/programming.html
+++ b/courses/programming.html
@@ -137,7 +137,7 @@
                                 <img style="width: 20rem; height: 16rem;" src="../landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
                             </a>
                             <div class="mt-3">
-                                <h5 style="color: #149DDD;">AI Nano-Degree</h5>
+                                <h5 style="color: #149DDD;">Data Labels</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2 style=" cursor: pointer;">
