--- a/courses/design.html
+++ b/courses/design.html
@@ -207,11 +207,11 @@
                     <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#about">Mission</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Products</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../index.html">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../index.html#about">Mission</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../index.html#services">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../index.html#portfolio">Products</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="../index.html#contact">Contact</a></li>
                         </ul>
                     </div>
 
