--- a/courses/premium.html
+++ b/courses/premium.html
@@ -59,7 +59,7 @@
                 <i style="color: white;" class="bi bi-list mobile-nav-toggle"></i>
             </nav>
 
-            <a href="register.html">
+            <a href="../register.html">
                 <button class="btn btn-primary">Join</button>
             </a>
             <!-- .navbar -->
