--- a/blogs/post.html
+++ b/blogs/post.html
@@ -22,15 +22,12 @@
             </button>
 
             <nav class="tm-nav" id="tm-nav">
-                <ul>
-                    <li class="tm-nav-item active">
-                        <a href="blogs.html" class="tm-nav-link">
-                            <i class="fas fa-home"></i> Gamma Prime
-                        </a>
-                    </li>
-                </ul>
+                <a class="logo d-flex justify-content-center" href="../index.html">
+                    <img style="width: 2rem; height: 2rem;" src="../logo1.png" alt="" srcset="">
+                    <!-- <p class="logo-name" style="margin: 8px 5px; font-size: 15px; color: #f7f7f7;">Gamma Prime</p> -->
+                </a>
             </nav>
-            <div class="tm-mb-65 d-flex justify-content-center">
+            <div class="tm-mb-65 d-inline-block">
                 <a rel="nofollow" href="#" class="tm-social-link">
                     <i class="fab fa-facebook tm-social-icon"></i>
                 </a>
@@ -45,12 +42,6 @@
                 </a>
             </div>
 
-            <div class="tm-site-footer">
-                <div class="d-flex copyright">
-                    <img style="width: 2rem; height: 2rem;" src="../logo1.png" alt="" srcset="">
-                    <p style="margin: 3px 5px;">Gamma Prime <span>-</span> <span style="color: #149DDD;">&copy;2021</span></p>
-                </div>
-            </div>
         </div>
     </header>
 
@@ -176,6 +167,15 @@
                     </div>
                 </aside>
             </div>
+            <footer class="row tm-row">
+                <hr class="col-12">
+                <div class="col-md-6 col-12 tm-color-gray">
+                    Design: <a rel="nofollow" target="_blank" href="https://github.com/Vicviral" class="tm-external-link">Victor Loveday</a>
+                </div>
+                <div class="col-md-6 col-12 tm-color-gray tm-copyright">
+                    &copy; Copyright <strong><span>Gamma Prime</span></strong>.
+                </div>
+            </footer>
         </main>
     </div>
     <script src="js/jquery.min.js"></script>
