--- a/blogs/post.html
+++ b/blogs/post.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="row tm-row">
-                <div class="col-lg-8 tm-post-col">
+                <div class="col-lg-12 tm-post-col">
                     <div class="tm-post-full">
                         <div class="mb-4">
                             <h2 class="pt-2 tm-color-primary tm-post-title">Why Machine Learning?</h2>
@@ -81,7 +81,7 @@
                                 Duis pretium efficitur nunc. Mauris vehicula nibh nisi. Curabitur gravida neque dignissim, aliquet nulla sed, condimentum nulla. Pellentesque id venenatis quam, id cursus velit. Fusce semper tortor ac metus iaculis varius. Praesent aliquam ex vel lectus
                                 ornare tristique. Nunc et eros quis enim feugiat tincidunt et vitae dui.
                             </p>
-                            <span class="d-block text-right tm-color-primary">Programming . Tech . AI</span>
+                            <span class="d-block tm-color-primary">Programming . Tech . AI</span>
                         </div>
 
                         <!-- Comments -->
@@ -134,16 +134,8 @@
                         </div> -->
                     </div>
                 </div>
-                <aside class="col-lg-4 tm-aside-col">
-                    <div class="tm-post-sidebar">
-                        <hr class="mb-3 tm-hr-primary">
-                        <h2 class="mb-4 tm-post-title tm-color-primary">Tags</h2>
-                        <ul class="tm-mb-75 pl-5 tm-category-list">
-                            <li><a href="#" class="tm-color-primary">Programming</a></li>
-                            <li><a href="#" class="tm-color-primary">Tech</a></li>
-                            <li><a href="#" class="tm-color-primary">Artificial Intelligence</a></li>
-
-                        </ul>
+                <aside class="col-lg-12">
+                    <div class="">
                         <hr class="mb-3 tm-hr-primary">
                         <h2 class="tm-mb-40 tm-post-title tm-color-primary">Related Posts</h2>
                         <a href="#" class="d-block tm-mb-40">
