Feat: allow admins to verify users

--- a/userDashboard.html
+++ b/userDashboard.html
@@ -115,10 +115,15 @@
         <section id="skills" class="skills section-bg">
             <div class="container">
 
-                <div class="section-title">
-                    <h2>Skills</h2>
-                </div>
+                <div class="section-title d-flex justify-content-between">
+                    <div>
+                        <h2>Skills</h2>
+                    </div>
 
+                    <div>
+                        <p class="btn-danger" style="margin-left: .5rem; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Verify</p>
+                    </div>
+                </div>
                 <div class="row skills-content">
 
                     <div class="col-lg-6" data-aos="fade-up">
@@ -181,8 +186,14 @@
         <section id="resume" class="resume">
             <div class="container">
 
-                <div class="section-title">
-                    <h2>Experience</h2>
+                <div class="section-title d-flex justify-content-between">
+                    <div>
+                        <h2>Experience</h2>
+                    </div>
+
+                    <div>
+                        <p class="btn-success" style="margin-left: .5rem; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Verified</p>
+                    </div>
                 </div>
 
                 <div class="row">
@@ -237,8 +248,14 @@
         <section id="courses" class="testimonials section-bg">
             <div class="container">
 
-                <div class="section-title">
-                    <h2>Courses</h2>
+                <div class="section-title d-flex justify-content-between">
+                    <div>
+                        <h2>Courses</h2>
+                    </div>
+
+                    <div>
+                        <p class="btn-success" style="margin-left: .5rem; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Verified</p>
+                    </div>
                 </div>
 
                 <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 2rem; background-color: #3984ed21; border-radius: 2rem; padding: .3rem .5rem; color: white;">
@@ -334,8 +351,14 @@
         <section id="portfolio" class="portfolio section-bg">
             <div class="container">
 
-                <div class="section-title">
-                    <h2>Portfolio</h2>
+                <div class="section-title d-flex justify-content-between">
+                    <div>
+                        <h2>Portfolio</h2>
+                    </div>
+
+                    <div>
+                        <p class="btn-danger" style="margin-left: .5rem; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Verify</p>
+                    </div>
                 </div>
 
                 <div class="row" data-aos="fade-up">
