Feat: profile for both admins and super admin

--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -76,8 +76,19 @@
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
                             <h6>Adebayo Drako</h6>
-                            <span>CEO</span>
+                            <span>Product Manager</span>
                         </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center" href="adminProfile.html">
+                                <i class="bi bi-person"></i>
+                                <span>Profile</span>
+                            </a>
+                        </li>
+
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -141,6 +152,14 @@
                 </a>
             </li> -->
             <!-- End F.A.Q Page Nav -->
+
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="adminProfile.html">
+                    <i class="bi bi-person"></i>
+                    <span>My Profile</span>
+                </a>
+            </li>
 
         </ul>
 
