--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -93,6 +93,17 @@
                         </li> -->
 
                         <li>
+                            <a class="dropdown-item d-flex align-items-center" href="adminProfile.html">
+                                <i class="bi bi-person"></i>
+                                <span>Profile</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+
+                        <li>
                             <a class="dropdown-item d-flex align-items-center" href="../index.html">
                                 <i class="bi bi-box-arrow-right"></i>
                                 <span>Sign Out</span>
@@ -130,6 +141,13 @@
                 <a class="nav-link" href="#">
                     <i class="bi bi-people"></i>
                     <span>People</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="adminProfile.html">
+                    <i class="bi bi-person"></i>
+                    <span>My Profile</span>
                 </a>
             </li>
             <!-- End Profile Page Nav -->
