Feat: create admin

--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -143,7 +143,21 @@
                     <span>People</span>
                 </a>
             </li>
-            <!-- End Profile Page Nav -->
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="admins.html">
+                    <i class="bi bi-people"></i>
+                    <span>Admins</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="adminProfile.html">
+                    <i class="bi bi-person"></i>
+                    <span>My Profile</span>
+                </a>
+            </li>
+
 
             <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="faq.html">
@@ -153,13 +167,6 @@
             </li> -->
             <!-- End F.A.Q Page Nav -->
 
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="adminProfile.html">
-                    <i class="bi bi-person"></i>
-                    <span>My Profile</span>
-                </a>
-            </li>
 
         </ul>
 
