--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -128,7 +128,7 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="dashboard.html">
+                <a class="nav-link collapsed" href="#">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
@@ -138,9 +138,16 @@
             <li class="nav-heading">Pages</li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="people.html">
                     <i class="bi bi-people"></i>
                     <span>People</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="admins.html">
+                    <i class="bi bi-people"></i>
+                    <span>Admins</span>
                 </a>
             </li>
 
@@ -150,7 +157,7 @@
                     <span>My Profile</span>
                 </a>
             </li>
-            <!-- End Profile Page Nav -->
+
 
             <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="faq.html">
@@ -160,8 +167,8 @@
             </li> -->
             <!-- End F.A.Q Page Nav -->
 
-        </ul>
 
+        </ul>
     </aside>
     <!-- End Sidebar-->
 
