--- a/generalDashboard/adminProfile.html
+++ b/generalDashboard/adminProfile.html
@@ -145,12 +145,19 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="adminProfile.html">
+                <a class="nav-link collapsed" href="admins.html">
+                    <i class="bi bi-people"></i>
+                    <span>Admins</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link " href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
                 </a>
             </li>
-            <!-- End Profile Page Nav -->
+
 
             <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="faq.html">
@@ -159,6 +166,7 @@
                 </a>
             </li> -->
             <!-- End F.A.Q Page Nav -->
+
 
         </ul>
 
