--- a/generalDashboard/admins.html
+++ b/generalDashboard/admins.html
@@ -201,27 +201,6 @@
             </div>
         </div>
 
-        <div class="modal fade" id="deleteModal" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Manage User</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div>
-                            <textarea style="width: 100%;" name="" id="" rows="5">Reason(s) for this action</textarea>
-                        </div>
-                        <br> You are about to <b>Delete</b> this user. This action is irrevokeable. Please confirm again.
-                    </div>
-                    <div class="modal-footer">
-                        <button data-bs-toggle="modal" data-bs-target="#messageModal" type="button" class="btn btn-danger">Yes</button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="modal fade" id="messageModal" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -410,7 +389,7 @@
                                             <div class="row mb-3">
                                                 <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
                                                 <div class="col-md-8 col-lg-9">
-                                                    <input name="password" type="password" class="form-control" id="currentPassword">
+                                                    <input name="password" type="password" class="form-control" id="currentPassword" placeholder="webDevIsCrap">
                                                 </div>
                                             </div>
 
@@ -730,6 +709,7 @@
                                                                     <th scope="col">Designation</th>
                                                                     <th scope="col">Acess Level</th>
                                                                     <th scope="col">Manage</th>
+                                                                    <th scope="col">Edit</th>
                                                                     <th scope="col">Delete</th>
                                                                 </tr>
                                                             </thead>
@@ -757,7 +737,9 @@
                                                                         </div>
                                                                     </td>
                                                                     <td data-bs-toggle="modal" data-bs-target="#manageModal" style="cursor: pointer;" class="text-success">Activate</td>
-                                                                    <td data-bs-toggle="modal" data-bs-target="#deleteModal" style="cursor: pointer;" class="text-danger"><i class="bi bi-trash"></i></td>
+                                                                    <td data-bs-toggle="modal" data-bs-target="#editAdminModal" style="cursor: pointer;" class="text-danger"><i class="bi bi-pencil"></i></td>
+                                                                    <td data-bs-toggle="modal" data-bs-target="#manageModal" style="cursor: pointer;" class="text-danger"><i class="bi bi-trash"></i></td>
+
                                                                 </tr>
 
                                                                 <tr style="color: white;">
@@ -783,7 +765,8 @@
                                                                         </div>
                                                                     </td>
                                                                     <td data-bs-toggle="modal" data-bs-target="#manageModal" style="cursor: pointer;" class="text-warning">Deactivate</td>
-                                                                    <td data-bs-toggle="modal" data-bs-target="#deleteModal" style="cursor: pointer;" class="text-danger"><i class="bi bi-trash"></i></td>
+                                                                    <td data-bs-toggle="modal" data-bs-target="#editAdminModal" style="cursor: pointer;" class="text-danger"><i class="bi bi-pencil"></i></td>
+                                                                    <td data-bs-toggle="modal" data-bs-target="#manageModal" style="cursor: pointer;" class="text-danger"><i class="bi bi-trash"></i></td>
                                                                 </tr>
                                                             </tbody>
                                                         </table>
