--- a/generalDashboard/admins.html
+++ b/generalDashboard/admins.html
@@ -180,7 +180,7 @@
 
             <div>
                 <button data-bs-toggle="modal" data-bs-target="#createAdminModal" class="btn btn-primary">Create Admin</button>
-                <button style="margin-left: 1rem;" data-bs-toggle="modal" data-bs-target="#assignTasknModal" class="btn btn-primary">Assign Task</button>
+                <button style="margin-left: 1rem;" data-bs-toggle="modal" data-bs-target="#assignTaskModal" class="btn btn-primary">Assign Task</button>
             </div>
         </div>
         <!-- End Page Title -->
@@ -201,6 +201,51 @@
                     <div class="modal-footer">
                         <button data-bs-toggle="modal" data-bs-target="#messageModal" type="button" class="btn btn-danger">Yes</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="assignTaskModal" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Assign Task</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Use * to separate tasks assigned</p>
+                        <div>
+                            <textarea style="width: 100%;" name="" id="" rows="10"></textarea>
+                        </div>
+
+                        <div class="d-flex justify-content-between mt-2">
+
+                            <div class="row mb-3">
+                                <label for="inputDate" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input type="date" class="form-control">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label for="inputText" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input type="text" placeholder="@Assignee" class="form-control">
+                                </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <label for="inputNumber" class="col-sm-2 col-form-label"></label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="file" id="formFile">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button data-bs-toggle="modal" data-bs-target="#messageModal" type="button" class="btn btn-danger">Assign</button>
                     </div>
                 </div>
             </div>
