--- a/generalDashboard/adminProfile.html
+++ b/generalDashboard/adminProfile.html
@@ -363,6 +363,18 @@
                                             </div>
                                         </div>
 
+                                        <div class="row mb-3">
+                                            <label style="color: #1b4daa;" for="fullName" class="col-md-4 col-lg-3 col-form-label">Status</label>
+                                            <div class="col-md-8 col-lg-9">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" id="changesMade" checked>
+                                                    <label class="form-check-label" for="changesMade">
+                                Available
+                              </label>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         <div class="text-center">
                                             <button type="submit" class="btn btn-primary">Save Changes</button>
                                         </div>
