Feat: activity log page link

--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -128,7 +128,7 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
@@ -148,6 +148,13 @@
                 <a class="nav-link collapsed" href="admins.html">
                     <i class="bi bi-people"></i>
                     <span>Admins</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="activityLog.html">
+                    <i class="bi bi-bar-chart"></i>
+                    <span>Activity Log</span>
                 </a>
             </li>
 
