--- a/generalDashboard/adminProfile.html
+++ b/generalDashboard/adminProfile.html
@@ -152,7 +152,14 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link " href="adminProfile.html">
+                <a class="nav-link collapsed" href="activityLog.html">
+                    <i class="bi bi-bar-chart"></i>
+                    <span>Activity Log</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
                 </a>
