--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -152,6 +152,13 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link collapsed" href="activityLog.html">
+                    <i class="bi bi-bar-chart"></i>
+                    <span>Activity Log</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
