--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -256,6 +256,8 @@
                                 <div class="col-lg-12">
 
                                     <div class="card">
+                                        <h5 style="margin-left: 1rem;" class="card-title">Registered Users</h5>
+
                                         <div class="card-body pt-4">
                                             <!-- Table with stripped rows -->
                                             <table class="table datatable">
@@ -298,11 +300,6 @@
                             </div>
                         </section>
 
-                        <div class="pagetitle mt-3">
-                            <h1>Status</h1>
-                        </div>
-                        <!-- End Page Title -->
-
                         <div style="margin-top: 2rem;" class="row">
                             <div class="col-lg-12">
 
@@ -313,6 +310,8 @@
                                             <div class="col-lg-12">
 
                                                 <div class="card">
+                                                    <h5 style="margin-left: 1rem;" class="card-title">Status</h5>
+
                                                     <div class="card-body pt-4">
                                                         <!-- Table with stripped rows -->
                                                         <table class="table datatable">
