--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -144,21 +144,35 @@
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="admins.html">
                     <i class="bi bi-people"></i>
                     <span>Admins</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="activityLog.html">
                     <i class="bi bi-bar-chart"></i>
                     <span>Activity Log</span>
                 </a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item mt-2">
+                <a class="nav-link collapsed" href="tasks.html">
+                    <i class="bi bi-graph-up-arrow"></i>
+                    <span>Tasks</span>
+                </a>
+            </li>
+
+            <li class="nav-item mt-2">
+                <a class="nav-link collapsed" href="blogs.html">
+                    <i class="bi bi-pencil"></i>
+                    <span>Blogs</span>
+                </a>
+            </li>
+
+            <li class="nav-item mt-2">
                 <a class="nav-link collapsed" href="adminProfile.html">
                     <i class="bi bi-person"></i>
                     <span>My Profile</span>
