--- a/generalDashboard/people.html
+++ b/generalDashboard/people.html
@@ -158,6 +158,20 @@
                 </a>
             </li>
 
+            <li class="nav-item mt-2">
+                <a class="nav-link collapsed" href="tasks.html">
+                    <i class="bi bi-graph-up-arrow"></i>
+                    <span>Tasks</span>
+                </a>
+            </li>
+
+            <li class="nav-item mt-2">
+                <a class="nav-link collapsed" href="blogs.html">
+                    <i class="bi bi-pencil"></i>
+                    <span>Blogs</span>
+                </a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link collapsed" href="adminProfile.html">
                     <i class="bi bi-person"></i>
